--- a/client/piek/src/components/OrderListLayout/main.module.sass
+++ b/client/piek/src/components/OrderListLayout/main.module.sass
@@ -1,3 +1,10 @@
+.OrderListLayout
+  margin-right: 15px
+  @media ( min-width: 2000px)
+    margin: 0 auto
+    width: auto !important
+    max-width: 1700px 
+
 .tableWrapper 
     display: table
     width: 100%
