--- a/client/piek/src/components/OrderLayout/Shipment/shipment.module.sass
+++ b/client/piek/src/components/OrderLayout/Shipment/shipment.module.sass
@@ -2,6 +2,4 @@
   color: var(--lowContrast)
 
 .btn
-  background: var(--accent) !important
-  color: var(--textInvert)
-  border-color: var(--border)
+  border-color: var(--border) !important
