--- a/client/piek/src/components/Sidebar/index.sass
+++ b/client/piek/src/components/Sidebar/index.sass
@@ -5,10 +5,9 @@
     position: fixed
     top: 0
     left: 0
-    height: 100vh
+    bottom: 0
     width: 50px 
    
-    
     .action-icon
         display: flex
         background: transparent
