--- a/client/piek/src/components/OrderLayout/Comments/index.module.sass
+++ b/client/piek/src/components/OrderLayout/Comments/index.module.sass
@@ -39,11 +39,12 @@
       opacity: 1
 
 .commentContent
-  display: flex
-  align-items: end
   padding-left: 5px
-  div:first-of-type
-    flex-grow: 1
+  p,span, div
+    background: var(--L0) !important
+    font-size: 1rem !important
+    color: var(--highContrast)
+
     
 .commentHeader
   display: flex
