--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -19,6 +19,11 @@ input::-webkit-inner-spin-button
 input[type=number] 
   -moz-appearance: textfield
 
+
+@media print
+   .noprint
+        display: none !important
+   
 .mr15
     margin-right: 15px
 .base-container
