--- a/client/piek/src/components/OrderLayout/sass/order-meta.sass
+++ b/client/piek/src/components/OrderLayout/sass/order-meta.sass
@@ -2,7 +2,7 @@
   .posRel
     // position: relative !important
   .Info
-    width: 400px
+    width: 350px
     background: var(--L1)
     flex-direction: column
     justify-content: space-between
@@ -14,7 +14,7 @@
       display: grid
       grid-template-columns: 1fr 1fr
       grid-template-rows: 50px 
-      gap: 12px 8px
+      gap: 18px 8px
       padding: 1rem 1rem 
       height: fit-content !important
       position: relative
@@ -22,6 +22,7 @@
         font-size: 1.2rem
         font-weight: 700
       .PaymentHistory
+        opacity: .2
         padding: 0 4px
         svg
           height: 15px
