--- a/client/piek/src/components/OrderListLayout/main.module.sass
+++ b/client/piek/src/components/OrderListLayout/main.module.sass
@@ -10,6 +10,7 @@
     width: 100%
     border: 1px solid var(--border)
     background: var(--L0)
+    border-radius: var(--br)
     margin-bottom: 2em
     box-sizing: border-box
 
@@ -58,7 +59,6 @@
         text-align: center
         font-size: .7rem
 
-
     tbody td
         padding: 8px 5px
         color: var(--lowContrast)
@@ -84,3 +84,8 @@
 .awaitingDispatch
     td:first-of-type
         background: var(--awaitingDispatch) !important
+
+.unpaidOrder
+     td:first-of-type
+        background: #ffd000
+  
