--- a/client/piek/src/components/OrderLayout/EditableComponents/EditableInfo.sass
+++ b/client/piek/src/components/OrderLayout/EditableComponents/EditableInfo.sass
@@ -1,7 +1,6 @@
 .EditableInfo
   .wrap
-    grid-template-columns: 1fr !important
-    gap: 0 0 !important
+    grid-gap: 0 !important
     .MuiFormControl-root
         width: 100%
         margin: 8px 0
