--- a/client/piek/src/components/OrderLayout/sass/order-meta.sass
+++ b/client/piek/src/components/OrderLayout/sass/order-meta.sass
@@ -1,38 +1,54 @@
+//component 
+.OrderInfoCard
+  background: var(--L1)
+  border: 1px solid var(--border)
+  border-radius: var(--br)
+  padding: 15px 
+  .row
+    display: flex !important
+    justify-content: space-between
+    margin-bottom: 10px
+  .heading
+    margin: 0
+    font-weight: 700
+    font-size: .9rem
+  .secondaryHeading
+    font-size: .9rem
+    color: var(--lowContrast)
+  table tr
+    line-height: 1.5
+    font-size: .9rem
+  table td 
+    padding-right: 10px
+    
+
 .OrderLayout
-  .posRel
-    // position: relative !important
   .Info
     width: 400px
-    background: var(--L1)
-    flex-direction: column
-    justify-content: space-between
+    display: grid
+    grid-template-rows: auto 100px
     height: 100%
     border-left: 1px solid var(--border)
     @media (max-width: 800px)
       max-width: 250px
     .wrap
       display: grid
-      grid-template-columns: 1fr 1fr
-      grid-template-rows: 50px 
-      gap: 18px 8px
+      grid-template-columns: 1fr 
+      grid-gap: 15px 10px
       padding: 1rem 1rem 
       height: fit-content !important
       position: relative
       .bold
         font-size: 1.2rem
         font-weight: 700
-      .PaymentHistory
-        opacity: .2
-        padding: 0 4px
-        svg
-          height: 15px
-          color: var(--accent)
       div:hover
         pre
           opacity: 1
+      .row
+        display: grid
+        grid-template-columns: 1fr 1fr 
       pre
-        font: 400 11px sans-serif
-        opacity: .8
+        font: 400 12px sans-serif
         color: var(--lowContrast)
         margin: 0
         user-select: none
@@ -45,12 +61,20 @@
         white-space: pre-wrap
         pre
           padding-bottom: .5rem
+   
     .actions
       position: fixed
       bottom: 0
       background: var(--L1)
-      padding: 0 1em 1em
+      padding: 1em
       color: var(--highContrast)
       width: 100%
       font-size: .8rem
       border-top: 1px solid var(--border)
+
+ 
+.paidVisualization
+  td:first-of-type
+    font-weight: 700 
+    padding-right: 1em
+
