--- a/client/piek/src/components/OrderLayout/sass/order-meta.sass
+++ b/client/piek/src/components/OrderLayout/sass/order-meta.sass
@@ -39,14 +39,17 @@
       height: fit-content !important
       position: relative
       .bold
-        font-size: 1.2rem
+        font-size: 1.1rem
         font-weight: 700
       div:hover
         pre
           opacity: 1
-      .row
+      .significantInfo
         display: grid
         grid-template-columns: 1fr 1fr 
+        grid-template-rows: 40px auto
+        grid-gap: 20px 10px
+
       pre
         font: 400 12px sans-serif
         color: var(--lowContrast)
