--- a/client/piek/src/components/OrderLayout/Shipment/shipment.module.sass
+++ b/client/piek/src/components/OrderLayout/Shipment/shipment.module.sass
@@ -3,3 +3,11 @@
 
 .btn
   border-color: var(--border) !important
+
+.deletePreOrderBtn
+  background: var(--L2)
+  color: var(--lowContrast)
+  transition: color 100ms ease
+  &:hover
+    background: var(--L1) !important
+    color: var(--highContrast)
