--- a/client/piek/src/components/OrderLayout/Comments/index.module.sass
+++ b/client/piek/src/components/OrderLayout/Comments/index.module.sass
@@ -32,14 +32,14 @@
   border-bottom: 1px solid var(--borderLight)
   line-height: 1.4
   white-space: pre-wrap
-  div:last-of-type
-    padding: 0px 8px 10px
+  // div:last-of-type
+    // padding: 0px 8px 10px
   &:hover
     .actions
       opacity: 1
 
 .commentContent
-  padding-left: 5px
+  padding: 10px 5px
   color: var(--highContrast) !important
   p,span, div
     background: var(--L0) !important
@@ -64,6 +64,7 @@
     color: var(--lowContrast)
     font-size: .8rem
     div
+      padding: 0 5px 
       &:hover
         text-decoration: underline
 
