--- a/client/piek/src/components/OrderLayout/Docs/docs.sass
+++ b/client/piek/src/components/OrderLayout/Docs/docs.sass
@@ -9,9 +9,8 @@
 
     .file-name
         line-height: 1
-        font-weight: 300
         padding: 5px 0
-        // font-size: .9rem
+        font-weight: normal
         width: fit-content
         &:hover
             color: var(--accent)
