--- a/client/piek/src/components/OrderLayout/EditableComponents/EditableInfo.sass
+++ b/client/piek/src/components/OrderLayout/EditableComponents/EditableInfo.sass
@@ -3,8 +3,9 @@
     grid-gap: 0 !important
     .MuiFormControl-root
         width: 100%
-        margin: 8px 0
+        margin: 5px 0
         input, textarea
-            height: .8em
-            color: var(--highContrast)
-            font-weight: normal !important
+            background: var(--L1)
+            border-radius: 8px
+            border: 1px solid var(--borderLight)
+            padding: 10px .5rem
