--- a/client/piek/src/components/OrderLayout/Shipment/shipment.module.sass
+++ b/client/piek/src/components/OrderLayout/Shipment/shipment.module.sass
@@ -1,13 +1,3 @@
 .checkbox span
   color: var(--lowContrast)
-
-.btn
-  border-color: var(--border) !important
-
-.deletePreOrderBtn
-  background: var(--L2)
-  color: var(--lowContrast)
-  transition: color 100ms ease
-  &:hover
-    background: var(--L1) !important
-    color: var(--highContrast)
+  font-size: .8rem
