--- a/client/piek/src/components/OrderLayout/sass/composition.module.sass
+++ b/client/piek/src/components/OrderLayout/sass/composition.module.sass
@@ -1,28 +1,17 @@
 .name, .quantity
     font-family: 'IBM Plex Mono' !important
 
+.unitName
+  input 
+    font-family: 'IBM Plex Mono' !important
+    font-size: 1.2rem
 
 .addOrderItem
     display: flex
     flex-direction: column
     padding: 1em 
-    background: var(--L0)
-    border: 1px solid var(--border)
-    border-radius: var(--br10)   
-    margin: 2em
     .quantityInput
         width: 100px
-
-    .pushOrderItemButton
-        border: 1px solid var(--border) !important
-        width: 100px
-        // border: none !important
-        display: flex
-        text-transform: none !important
-        align-self: self-start
-        background: var(--accentLight)
-        color: var(--accent)
-        margin-top: 6px
 
 .Unit 
     position: relative
