--- a/client/piek/src/components/OrderLayout/sass/index.sass
+++ b/client/piek/src/components/OrderLayout/sass/index.sass
@@ -13,22 +13,6 @@
   
 .preorderTitle
     color: var(--accent)
-    
-.MuiPaper-root
-    background: var(--L0) !important
-    input
-        color: var(--highContrast) !important
-    .MuiTypography-root
-        color: var(--lowContrast) 
-        span
-            font-weight: 500 
-            color: var(--highContrast) !important
-
-    .dialog-danger-btn
-        text-transform: initial !important
-
-        span
-            color: var(--danger)
         
 .OrderLayout
   --window-padding: 0px
@@ -45,8 +29,8 @@
     grid-column-start: 1
     grid-column-end: 3
     border-bottom: 1px solid var(--border)
-    padding: 2px 15px
-
+    padding: 2px 20px
+    background: var(--L1)
   .Info
     grid-column-start: 3
     overflow-y: auto
