--- a/client/piek/src/components/OrderListLayout/Archive/archive.module.sass
+++ b/client/piek/src/components/OrderListLayout/Archive/archive.module.sass
@@ -6,9 +6,9 @@
   font-size: 1.3rem
   input
     max-width: 500px
+    color: var(--highContrast)
     background: var(--L0)
     border: 1px solid var(--border)
-    // box-shadow: 0 0 5px 0 var(--border)
     font-size: 1rem
     padding: 10px 20px
     border-radius: 20px
@@ -20,9 +20,3 @@
     background: var(--L1)
   td
     border: none !important
-
-.previewHeading
-  color: var(--highContarst)
-  font-family: "IBM PLEX MONO"
-  font-weight: 600
-  font-size: .9rem
