--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -1,6 +1,6 @@
 html
     background: var(--L0) !important
-    color: var(--highContrast)
+    color: var(--lowContrast)
     @media (max-width: 1000px)
         font-size: .9rem
     
@@ -94,3 +94,15 @@ input[type=number]
     &:hover  
         svg 
             color: var(--accent)
+
+.MuiDialog-paper
+  background: var(--L0) !important
+
+// .MuiDialogTitle-root
+//   color: var(--highContrast) !important
+
+// .MuiButton-root
+//   text-transform: none !important
+//   color: var(--highContrast) !important
+//   border-color: var(--border) !important
+//   box-shadow: none !important
