--- a/client/piek/src/components/OrderLayout/sass/index.sass
+++ b/client/piek/src/components/OrderLayout/sass/index.sass
@@ -19,9 +19,7 @@
   position: relative
   min-height: 100vh
   border-left: 1px solid var(--border)
-  // border-radius: var(--br)
   outline: none !important  
-  // background: var(--L0)
   position: relative
   display: grid
   grid-template-columns: 2fr auto
@@ -56,38 +54,11 @@
   .Composition
     grid-column-start: 1
     grid-column-end: -1
-  .CheckList, .Docs
+  .Docs
     min-height: 100px
     grid-column-start: 2
     grid-column-end: -1
       
-.CheckList
-  .CheckListUnit
-    position: relative
-    padding:  .4em 2em
-    width: fit-content
-    &:hover
-      background: var(--borderLight)
-      border-radius: 5px
-    &::after
-      content: ''
-      top: 50%
-      transform: translateY(-50%)
-      left: 10px
-      position: absolute
-      width: 8px 
-      height: 8px
-      border-radius: 100%
-      opacity: .6
-      border: 1px solid var(--accent)
-  .CheckListUnit.complited
-      text-decoration: line-through 
-      color: var(--lowContrast)
-      &::after
-          background: var(--accent)
-            
-
-
 
 
 
