--- a/client/piek/src/components/OrderLayout/Docs/docs.sass
+++ b/client/piek/src/components/OrderLayout/Docs/docs.sass
@@ -12,6 +12,7 @@
         padding: 5px 0
         font-weight: normal
         width: fit-content
+        color: var(--highContrast)
         &:hover
             color: var(--accent)
 
