--- a/client/piek/src/components/OrderLayout/sass/index.sass
+++ b/client/piek/src/components/OrderLayout/sass/index.sass
@@ -68,3 +68,10 @@
     min-height: 100px
     grid-column-start: 2
     grid-column-end: -1
+
+.awaitingDispatch 
+  background: var(--awaitingDispatch) !important
+
+.needAttention 
+  background: var(--needAttention) !important
+  color: var(--textInvert) !important
