--- a/client/piek/src/components/OrderListLayout/main.module.sass
+++ b/client/piek/src/components/OrderListLayout/main.module.sass
@@ -88,6 +88,10 @@
     td:first-of-type
         background: var(--awaitingDispatch) !important
 
+.needAttention
+    td:first-of-type
+        background: var(--needAttention) !important
+
 .unpaidOrder
      td:first-of-type
         background: #ffd000
