--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -79,7 +79,6 @@ input[type=number]
     h2
         color: var(--highContrast)
         font-size: 1rem
-
     span
         color: var(--accent)
         margin-bottom: -5px !important
@@ -103,14 +102,18 @@ input[type=number]
         svg 
             color: var(--accent)
 
-.MuiDialog-paper
-  background: var(--L0) !important
-
-// .MuiDialogTitle-root
-//   color: var(--highContrast) !important
-
-// .MuiButton-root
-//   text-transform: none !important
-//   color: var(--highContrast) !important
-//   border-color: var(--border) !important
-//   box-shadow: none !important
+.pageLayout__header
+  display: flex
+  align-items: center
+  padding: 15px 0 20px
+  .pageLayout__title
+    font-weight: 600
+    color: var(--highContrast)
+  .pageLayout__icon
+    margin-right: .5rem
+    path
+      color: var(--accent)
+      stroke-width: .8
+      stroke: var(--L0)
+  .pageLayout__actions
+    margin-left: auto
