--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -21,7 +21,7 @@ input[type=number]
 
 [contenteditable]
   outline: 0px solid transparent
-[contentEditable=true]:empty:not(:focus):before
+[contentEditable=true]:empty:before
   content: attr(data-ph)
   color: var(--lowContrast)
   font-size: .9rem
