reclamation beta && checklist in comment bags fixed

--- a/client/piek/src/components/OrderLayout/Comments/index.module.sass
+++ b/client/piek/src/components/OrderLayout/Comments/index.module.sass
@@ -37,8 +37,7 @@
     position: absolute
     width: 10px 
     height: 10px
-    border-radius: 100%
-    opacity: .6
+    border-radius: 3px
     border: 1px solid var(--accent)
 .checklistUnit_complited
   text-decoration: line-through 
