--- a/client/piek/src/components/OrderListLayout/main.module.sass
+++ b/client/piek/src/components/OrderListLayout/main.module.sass
@@ -1,5 +1,5 @@
 .OrderListLayout
-  margin-right: 15px
+  margin-right: 20px
   @media ( min-width: 2000px)
     margin: 0 auto
     width: auto !important
@@ -13,22 +13,6 @@
     border-radius: var(--br)
     margin-bottom: 2em
     box-sizing: border-box
-
-    .tableSearchInput
-        display: flex
-        height: 50px
-        align-items: center
-        .action-icon
-            padding: 0 10px
-            width: 20px
-        input
-            border: none
-            flex-grow: 1
-            background: transparent
-            color: var(--highContrast)
-            &:active, &:focus
-                outline: none !important
-
     .tableFooter
         padding: .7em
         background: var(--L0)
@@ -46,11 +30,11 @@
     width: 100%
     border-spacing: 0
     thead th
-        color: var(--lowContrast)
+        color: var(--highContrast)
+        border-bottom: 1px solid var(--border)
         height: 30px
         font-size: .7rem
-        font-weight: 300
-        border-bottom: 1px solid var(--border)
+        font-weight: 500
         text-align: left
     thead th:last-of-type
         padding: 0 
@@ -84,18 +68,33 @@
     tbody tr:hover
         background: var(--L1)
     
+
+.awaitingDispatch,
+.needAttention,
+.unpaidOrder
+    position: relative
+    td:first-of-type::before
+        content: ''
+        position: absolute
+        top: 0
+        bottom: 0
+        left: 0
+        width: 4px
+        
+
 .awaitingDispatch
-    td:first-of-type
+    td:first-of-type::before
         background: var(--awaitingDispatch) !important
 
 .needAttention
-    td:first-of-type
+    td:first-of-type::before
         background: var(--needAttention) !important
 
 .unpaidOrder
-     td:first-of-type
+     td:first-of-type::before
         background: #ffd000
   
+
 .customerTableInfo
     div:first-of-type
         color: var(--highContrast)
