--- a/client/piek/src/components/ReclamationLayout/index.module.sass
+++ b/client/piek/src/components/ReclamationLayout/index.module.sass
@@ -1,2 +1,61 @@
 .reclatationLayout
-  padding: 0 15px
+  position: relative
+  margin: 0 15px 15px
+  height: calc(100vh - 40px)
+  overflow-y: clip
+.columnWrapper
+  position: absolute
+  top: 60px
+  bottom: 0
+  display: grid !important
+  grid-template-columns: 1fr 1fr 1fr
+  width: 100%
+  border: 1px solid var(--border)
+  border-radius: var(--br) 
+  .reclColumn:not(:first-of-type)
+    border-left: 1px solid var(--border)
+  .draggableWrapper
+    display: flex
+    flex-grow: 1
+    flex-direction: column
+    height: 100%
+  .heading
+    color: var(--accent)
+    padding: 10px 15px 10px
+    font-size: .9rem
+    font-weight: 600
+
+
+.item
+  display: grid
+  grid-template-columns: 2fr 1fr .7fr
+  text-decoration: none !important
+  align-items: center
+  position: relative
+  border-bottom: 1px solid var(--borderLight)
+  padding: 30px 10px 
+  grid-gap: 13px 
+  .orderItem
+    font-family: 'IBM Plex Mono'
+    color: var(--highContrast)
+    font-size: 1rem 
+  div
+    color: var(--lowContrast)
+    font-size: .8rem 
+
+
+.needAttention, 
+.awaitingDispatch
+  &::before
+    content: ''
+    position: absolute
+    bottom: 0
+    top: 0
+    left: 0
+    background: var(--needAttention)
+    height: 100%
+    width: 4px
+
+.awaitingDispatch
+  &::before
+    background: var(--awaitingDispatch)
