ui && archive && reclamation && build

--- a/client/piek/src/components/AttendanceLayout/index.sass
+++ b/client/piek/src/components/AttendanceLayout/index.sass
@@ -37,23 +37,20 @@ $status-102: #72c900
 .reportConfigurator
     $br1: 7px
     display: flex
-    border: 1px solid var(--border)
-    border-radius: var(--br)
     margin-bottom: 1rem 
     font-size: .9em
     .chooseMonth
-        padding: 15px
+        padding: 5px
         display: flex
+        height: fit-content
         border-bottom: 2px solid transparent
         div
             margin: 5px 7px 
-            padding-bottom: 4px
             color: var(--lowContrast)
             width: fit-content
             &:hover
                 color: var(--accent)
         .active
-            // background: var(--accentLight)
             color: var(--accent)
             border-bottom: 2px solid var(--accent)
 
