--- a/client/piek/src/components/OrderLayout/Comments/index.module.sass
+++ b/client/piek/src/components/OrderLayout/Comments/index.module.sass
@@ -4,13 +4,12 @@
 .commentInputForm
   display: flex
   align-items: center
-  border: 1px solid var(--borderLight)
   padding: 0px 15px
   margin: 10px
   border-radius: 10px
   white-space: pre-wrap
   color: var(--highContrast)
-  background: var(--L1)
+  border: 1px solid var(--borderLight)
   div:first-of-type
     flex-grow: 1
     outline: none
@@ -53,7 +52,7 @@
   align-items: center
   padding: 5px 8px
   width: fit-content
-  color: var(--accent)
+  color: var(--lowContrast)
   border-radius: var(--br10)
   margin: 5px 0
   svg
