--- a/client/piek/src/components/OrderListLayout/Archive/archive.module.sass
+++ b/client/piek/src/components/OrderListLayout/Archive/archive.module.sass
@@ -1,26 +1,8 @@
-.inputWrapper
-  display: flex
-  justify-content: center
-  margin: 0em 0 1rem
-  width: 100%
-  font-size: 1.3rem
-  input
-    max-width: 500px
-    color: var(--highContrast)
-    background: var(--L0)
-    border: 1px solid var(--border)
-    font-size: 1rem
-    padding: 10px 20px
-    border-radius: 20px
-
-.archiveTable
-  border-radius: var(--br)
-  border: 1px solid var(--border)
-
 .filterFormControl
   display: flex !important
   flex-direction: row !important
   align-items: center
+  margin: 0 1rem !important
 .filterInputBase
   margin: 0 5px 
   padding: 2px 5px !important
