--- a/client/piek/src/components/OrderListLayout/main.module.sass
+++ b/client/piek/src/components/OrderListLayout/main.module.sass
@@ -1,16 +1,8 @@
-.OrderListLayout
-  margin-right: 20px
-  @media ( min-width: 2000px)
-    margin: 0 auto
-    width: auto !important
-    max-width: 1700px 
-
 .tableWrapper 
     display: table
     width: 100%
-    border: 1px solid var(--border)
-    background: var(--L0)
-    border-radius: var(--br)
+    // border: 1px solid var(--border)
+    // border-radius: var(--br)
     margin-bottom: 2em
     box-sizing: border-box
     .tableFooter
@@ -22,8 +14,6 @@
         border-left: none !important
     table td:last-of-type
         border-right: none !important
-    table tr:last-of-type td
-        border-bottom: none !important
     
 .tableMain
     border-top: 1px solid var(--border)
@@ -62,9 +52,6 @@
         padding-left: 15px
     td:nth-of-type(4)
         color: var(--highContrast)
-
-    tbody tr:last-of-type td
-        border-bottom: none
     tbody tr:hover
         background: var(--L1)
     
