--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -9,11 +9,14 @@ body
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',sans-serif
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
+  overflow: hidden 
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button 
   -webkit-appearance: none
   margin: 0
+input:active, input:focus
+    outline: none !important
 
 /* Firefox */
 input[type=number] 
@@ -31,17 +34,21 @@ input[type=number]
 @media print
    .noprint
         display: none !important
-   
-.mr15
-    margin-right: 15px
-.base-container
-    min-height: 100vh !important
-    margin: 0 auto
-    margin-left: 50px
 
-.tooltip
-    font-size: 12px !important
-    padding: 5px !important
+.App
+  display: grid
+  grid-template-columns: 51px auto
+  height: 100vh
+
+
+.base-container
+  overflow-y: auto !important
+  @media ( min-width: 2000px)
+    margin: 0 auto
+    width: 1700px 
+    border-left: 1px solid var(--border)
+    border-right: 1px solid var(--border)
+
 
 .action-block
     display: flex
@@ -57,10 +64,8 @@ input[type=number]
     color: var(--highContrast)
     &:hover
         color: var(--accent)
-    path
-        // уменьшение толщины линий иконок
-        stroke-width: .8
-        stroke: var(--L0) 
+    svg
+      width: 22px
 
     @media (max-width: 900px)
         svg
@@ -105,14 +110,16 @@ input[type=number]
 .pageLayout__header
   display: flex
   align-items: center
-  padding: 15px 0 20px
+  padding: 10px 15px 15px
+  min-height: 34px
   .pageLayout__title
-    font-weight: 600
+    font-weight: 500  
     color: var(--highContrast)
   .pageLayout__icon
     margin-right: .5rem
+    width: 23px
     path
-      color: var(--accent)
+      color: var(--highContrast)
       stroke-width: .8
       stroke: var(--L0)
   .pageLayout__actions
