--- a/client/piek/src/components/OrderLayout/Comments/index.module.sass
+++ b/client/piek/src/components/OrderLayout/Comments/index.module.sass
@@ -43,7 +43,12 @@
   color: var(--lowContrast)
   &::after
       background: var(--accent)
-          
+      
+.mentionedUserHiglight
+  background: var(--accentLight)
+  width: fit-content
+  padding: 0 5px
+  border-radius: 4px
 
 .saveButton
   align-self: end
