--- a/client/piek/src/components/Sidebar/index.sass
+++ b/client/piek/src/components/Sidebar/index.sass
@@ -1,3 +1,5 @@
+.marginTopAuto
+    margin-top: auto
 .Sidebar
     display: flex
     flex-direction: column
@@ -21,8 +23,6 @@
         path
             stroke-width: .8
             stroke: var(--L0)
-    .settings
-        margin-top: auto
 
     .sidebar-active 
         .iconWrapper
