--- a/client/piek/src/components/OrderLayout/Comments/index.module.sass
+++ b/client/piek/src/components/OrderLayout/Comments/index.module.sass
@@ -76,7 +76,7 @@
       opacity: 1
 
 .commentContent
-  padding: 10px 5px
+  padding: 5px 5px 10px
   color: var(--highContrast) !important
   p,span, div
     background: var(--L0) !important
