--- a/client/piek/src/components/OrderLayout/sass/composition.module.sass
+++ b/client/piek/src/components/OrderLayout/sass/composition.module.sass
@@ -27,7 +27,7 @@
         align-self: center
         padding-right: 10px
     .name, .quantity
-        font-size: 1.1rem
+        font-size: 1.3rem
     .quantity
         color: var(--accent)
         font-weight: 600
@@ -36,4 +36,5 @@
         grid-column-start: 2
         grid-column-end: 4
         color: var(--lowContrast) !important
+        font-weight: normal
         padding-top: 5px
