--- a/client/piek/src/components/OrderLayout/EditableComponents/EditableInfo.sass
+++ b/client/piek/src/components/OrderLayout/EditableComponents/EditableInfo.sass
@@ -1,6 +1,7 @@
 .EditableInfo
   .wrap
     grid-gap: 0 !important
+    padding: 1rem .5rem !important
     .MuiFormControl-root
         width: 100%
         margin: 5px 0
