--- a/client/piek/src/components/OrderLayout/OrderItemActions/index.module.sass
+++ b/client/piek/src/components/OrderLayout/OrderItemActions/index.module.sass
@@ -11,5 +11,8 @@
     transform: rotate(90deg)
 
 .inputListItem
+    margin: 8px .5rem
+    input, textarea
+        font-size: .9rem
     &:hover
         background: transparent !important
