--- a/client/piek/src/components/OrderListLayout/main.module.sass
+++ b/client/piek/src/components/OrderListLayout/main.module.sass
@@ -1,8 +1,6 @@
 .tableWrapper 
     display: table
     width: 100%
-    // border: 1px solid var(--border)
-    // border-radius: var(--br)
     margin-bottom: 2em
     box-sizing: border-box
     .tableFooter
@@ -24,7 +22,7 @@
         border-bottom: 1px solid var(--border)
         height: 30px
         font-size: .7rem
-        font-weight: 500
+        font-weight: normal
         text-align: left
     thead th:last-of-type
         padding: 0 
