--- a/client/piek/src/components/Sidebar/index.sass
+++ b/client/piek/src/components/Sidebar/index.sass
@@ -14,23 +14,21 @@
         padding: 5px 0
         width: 100%
         box-sizing: border-box
-        color: var(--highContrast)
+        color: var(--lowContrast)
     .iconWrapper
         display: flex
         align-self: center
         padding: 5px
-        border-radius: 4px
         path
             stroke-width: .8
             stroke: var(--L0)
 
     .sidebar-active 
+        box-shadow: inset 3px 0px 0px var(--accent) !important
         .iconWrapper
-            background: var(--accentLight)
-            padding: 5px
-            border-radius: 4px
+            padding: 5px           
             path
-                color: var(--accent)
-                stroke: var(--accentLight)
+                color: var(--highContrast)
+                stroke: var(--L0)
 
 
