--- a/client/piek/src/components/AttendanceLayout/sass/attendance.module.sass
+++ b/client/piek/src/components/AttendanceLayout/sass/attendance.module.sass
@@ -24,16 +24,19 @@ $status-102: #72c900
     font-weight: normal
   .interval
     color: var(--highContrast) !important
+  tbody tr:hover
+    background: var(--LI)
+
   tbody td
     border: 1px solid var(--border) !important
     padding: 0
     position: relative
+    min-width: 30px
     
-    div
-        padding: 2px
-    .status-101
-      color: $status-101 !important
+
+
     &:nth-of-type(1)
+      width: min-content !important
       color: var(--highContrast)
       padding-left: 6px
       border-left: none !important
@@ -45,3 +48,8 @@ $status-102: #72c900
       padding: 0 7px 
 .tableFooter
     padding: .7em
+
+.intervalgrid
+  padding: 3px
+  display: grid
+  grid-template-rows: 1fr 1fr 1fr
