--- a/client/piek/src/components/OrderLayout/Docs/docs.sass
+++ b/client/piek/src/components/OrderLayout/Docs/docs.sass
@@ -1,5 +1,5 @@
 .Docs
-    border-left: 1px solid var(--border)
+    // border-left: 1px solid var(--border)
     .filesContainer
         padding: 1em
     a
@@ -9,8 +9,8 @@
 
     .file-name
         line-height: 1
-        padding: 5px 0
-        font-weight: normal
+        padding: 6px 0
+        font-size: .9rem
         width: fit-content
         color: var(--highContrast)
         &:hover
