--- a/client/piek/src/components/OrderLayout/sass/composition.module.sass
+++ b/client/piek/src/components/OrderLayout/sass/composition.module.sass
@@ -18,6 +18,7 @@
     border-bottom: 1px solid var(--borderLight) !important
     display: grid
     grid-template-columns: .3fr 15fr 1fr 1fr 
+    font-size: .9rem
     &:last-of-type
       border-bottom: none !important
     .index
@@ -27,7 +28,7 @@
         align-self: center
         padding-right: 10px
     .name, .quantity
-        font-size: 1.3rem
+        font-size: 1.2rem
     .quantity
         color: var(--accent)
         font-weight: 600
