expanded link in tables

--- a/client/piek/src/components/OrderLayout/Comments/index.module.sass
+++ b/client/piek/src/components/OrderLayout/Comments/index.module.sass
@@ -17,13 +17,14 @@
 .commentInputForm
   display: flex
   align-items: center
-  padding: 0px 15px
+  padding: 0px 10px
   margin: 10px
   border-radius: 10px
   white-space: pre-wrap
   color: var(--highContrast) !important
   border: 1px solid var(--border)
   background: var(--L0)
+  font-size: .9rem !important
   div:first-of-type
     flex-grow: 1
     outline: none
