--- a/client/piek/src/components/OrderLayout/sass/order-meta.sass
+++ b/client/piek/src/components/OrderLayout/sass/order-meta.sass
@@ -10,11 +10,12 @@
   .row
     display: flex !important
     justify-content: space-between
-    margin-bottom: 10px
+    margin-bottom: 5px
   .heading
     margin: 0
     font-weight: 700
-    font-size: .9rem
+    text-transform: uppercase
+    font-size: .65rem
   .secondaryHeading
     font-size: .8rem
     color: var(--lowContrast)
