--- a/client/piek/src/components/OrderListLayout/Archive/archive.module.sass
+++ b/client/piek/src/components/OrderListLayout/Archive/archive.module.sass
@@ -2,7 +2,9 @@
   display: flex !important
   flex-direction: row !important
   align-items: center
-  margin: 0 1rem !important
+  padding: .3rem 1rem !important
+  border-bottom: 1px solid var(--border) !important
+
 .filterInputBase
   margin: 0 5px 
   padding: 2px 5px !important
